--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "next": "12.2.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-tensorflow": "^2.2.0"
+    "react-tensorflow": "^2.2.0",
+    "react-webcam": "^7.0.1"
   },
   "devDependencies": {
     "@types/node": "18.0.6",
