--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fontsource/rubik": "^4.5.10",
     "@fontsource/sarabun": "^4.5.8",
     "@mui/material": "^5.9.1",
+    "@supabase/supabase-js": "^1.35.4",
     "framer-motion": "^6.5.1",
     "next": "12.2.3",
     "react": "18.2.0",
